[package]
name = "nostr_vault"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-cors = "0.6.4"
regex = "1"
actix-web = "4"
lazy_static = "1.4.0"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
thiserror = "1.0.24"
serde-aux = "3"
unicode-segmentation = "1.7.1"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0.40"
base64 = "0.13.0"
argon2 = { version = "0.4", features = ["std"] }
validator = "0.15.0"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1"


[dev-dependencies]
easy-hasher = "2.2.1"
claim = { git = "https://github.com/tee8z/rust-claim", branch = "master"}
once_cell = "1.7.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
linkify = "0.8.0"
